feat: added OAuth2 and more features